
Version 4.0
-----------

(codename to be selected, release date to be decided)

- Added `color` parameters to lots of interfaces that directly or indirectly
  call into echoing.  This previously was always autodetection (with the
  exception of the `echo_via_pager` function).  Now you can forcefully
  enable or disable it, overriding the auto detection of Click.

Version 3.3
-----------

(bugfix release, released on September 8th 2014)

- Fixed an issue with error reporting on Python 3 for invalid forwarding
  of commands.

Version 3.2
-----------

(bugfix release, released on August 22nd 2014)

- Added missing `err` parameter forwarding to the `secho` function.
- Fixed default parameters not being handled properly by the context
  invoke method.  This is a backwards incompatible change if the function
  was used improperly.  See :ref:`upgrade-to-3.2` for more information.
- Removed the `invoked_subcommands` attribute largely.  It is not possible
  to provide it to work error free due to how the parsing works so this
  API has been deprecated.  See :ref:`upgrade-to-3.2` for more information.
- Restored the functionality of `invoked_subcommand` which was broken as
  a regression in 3.1.

Version 3.1
-----------

(bugfix release, released on August 13th 2014)

- Fixed a regression that caused contexts of subcommands to be
  created before the parent command was invoked which was a
  regression from earlier Click versions.

Version 3.0
-----------

(codename "clonk clonk", released on August 12th 2014)

- formatter now no longer attempts to accomodate for terminals
  smaller than 50 characters.  If that happens it just assumes
  a minimal width.
- added a way to not swallow exceptions in the test system.
- added better support for colors with pagers and ways to
  override the autodetection.
- the CLI runner's result object now has a traceback attached.
- improved automatic short help detection to work better with
  dots that do not terminate sentences.