@@ -25,7 +25,7 @@ from .decorators import pass_context, pass_obj, make_pass_decorator, \
 
 # Types
 from .types import ParamType, File, Path, Choice, IntRange, STRING, INT, \
-     FLOAT, BOOL, UUID
+     FLOAT, BOOL, UUID, UNPROCESSED
 
 # Utilities
 from .utils import echo, get_binary_stream, get_text_stream, open_file, \
@@ -59,7 +59,7 @@ __all__ = [
 
     # Types
     'ParamType', 'File', 'Path', 'Choice', 'IntRange', 'STRING', 'INT',
-    'FLOAT', 'BOOL', 'UUID',
+    'FLOAT', 'BOOL', 'UUID', 'UNPROCESSED',
 
     # Utilities
     'echo', 'get_binary_stream', 'get_text_stream', 'open_file',
